test/expected/explain_+ctor-error.out
explain X::C()
        ^
9: error: "X::C": unknown name
